src/test/deca/context/valid/auto/valid/test32.deca
{
float z;
int x2;
float x = (144.55 + 8);
}
