src/test/deca/context/invalid/CastToFloat.deca
{
    int x = 2020;
    float a = (float) x;
}